# auto_bangumi_rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-static.yml  build.yml
src/: bangumi.rs  lib.rs  main.rs  parser.rs
tests/: parser_test.rs
