[package]
name = "auto_bangumi_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.4"
lazy_static = "1.4.0"
regex = "1.9.5"
reqwest = "0.11.20"
rss = "2.0.6"
tokio = {version = "1.32.0", features = ["full"]}
openssl = { version = "*", features = ["vendored"] }
